--- a/.github/workflows/connection.yml
+++ b/.github/workflows/connection.yml
@@ -35,27 +35,27 @@ jobs:
  
       - name: downloading  vulnerability  database
         run: |
-          /usr/local/bin/trivy image --download-db-only  
-     
-      - name: Run Trivy  scan for Docker Image and generate html report
-        run: |
-          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs._REPO }}${{ inputs.image_name }}
+          /usr/local/bin/trivy image --download-db-only 
+              
+     # - name: Run Trivy  scan for Docker Image and generate html report
+      #  run: |
+       #   /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs._REPO }}${{ inputs.image_name }}
       
-      - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
-        run: |
-          /usr/local/bin/trivy fs --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+      #- name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
+       # run: |
+        #  /usr/local/bin/trivy fs --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
-      - name: Run Trivy scan for dockerfile 
-        run: |
-          /usr/local/bin/trivy conf --policy ./ReusableWorkflow/policies --format template --template "@./ReusableWorkflow/html.tpl" -o Report3.html  --namespaces user ./ReusableWorkflow/configs
+      #- name: Run Trivy scan for dockerfile 
+       # run: |
+        #  /usr/local/bin/trivy conf --policy ./ReusableWorkflow/policies --format template --template "@./ReusableWorkflow/html.tpl" -o Report3.html  --namespaces user ./ReusableWorkflow/configs
         
-      - name: Append all reports to Report.html
-        run: |
-          cat Report3.html >> Report2.html;cat Report2.html >> Report.html
-      - name: Upload Trivy vulnerabilities Report to artifact
-        uses: actions/upload-artifact@v3
-        with:
-          path: "Report.html"  
+      #- name: Append all reports to Report.html
+       # run: |
+        #  cat Report3.html >> Report2.html;cat Report2.html >> Report.html
+      #- name: Upload Trivy vulnerabilities Report to artifact
+       # uses: actions/upload-artifact@v3
+        #with:
+         # path: "Report.html"  
 #      #  Send Trivy report from self-hosted runner
 #      - name: Send Report in mail
 #        uses: dawidd6/action-send-mail@v3
@@ -76,56 +76,56 @@ jobs:
 #          in_reply_to: svc-checkmarx@bakerhughes.com
 #          attachments: ./Report.html
 
-      - name: check for Crtical & High vulnerabilities in Docker Image
-        run: |
-          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.hub.docker.com }}${{ inputs.image_name }}
+      #- name: check for Crtical & High vulnerabilities in Docker Image
+      #  run: |
+      #    /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.hub.docker.com }}${{ inputs.image_name }}
      
-      - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
-        run: |
-          /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore"  ${{ inputs.Packages_lock }}      
-      - name: check for Misconfig in Dockerfile (Optional)
-        run: |
-          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./ReusableWorkflow/configs
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          registry: hub.docker.com
-          username: ${{ secrets.REGISTRY_PASSWORD }}
-          password: ${{ secrets.REGISTRY_USERNAME }}  
-      - name: Push Docker Image to registry
-        run: |
-          docker image push ${{ inputs.hub.docker.com }}${{ inputs.image_name }}
-  build:
-    runs-on: ubuntu-latest
+     # - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
+     #   run: |
+       #   /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore"  ${{ inputs.Packages_lock }}      
+      #- name: check for Misconfig in Dockerfile (Optional)
+       # run: |
+      #    /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./ReusableWorkflow/configs
+     # - name: Docker Login
+        #uses: docker/login-action@v2
+        #with:
+         # registry: ghcr.io
+        #  username: ${{ secrets.REGISTRY_PASSWORD }}
+       #   password: ${{ secrets.REGISTRY_USERNAME }}  
+      #- name: Push Docker Image to registry
+      #  run: |
+     #     docker image push ${{ inputs.hub.docker.com }}${{ inputs.image_name }}
+ # build:
+   # runs-on: ubuntu-latest
 
-    steps:      
-      - uses: actions/checkout@v2
+    #steps:      
+     # - uses: actions/checkout@v2
       
-      - name: Setup BuildX
-        uses: docker/setup-buildx-action@v1
+      #- name: Setup BuildX
+       # uses: docker/setup-buildx-action@v1
 
-      - name: Login to the REGISTRY
-        uses: docker/login-action@v1
-        with:
-          username: ${{secrets.REGISTRY_USERNAME}}
-          password: ${{secrets.REGISTRY_PASSWORD}}
+      #- name: Login to the REGISTRY
+       # uses: docker/login-action@v1
+       # with:
+       #   username: ${{secrets.REGISTRY_USERNAME}}
+      #    password: ${{secrets.REGISTRY_PASSWORD}}
       
-      - name: Set the tag
-        run: |
-          if [ -z "${{inputs.tag}}" ]
-          then
-            echo "final_tag=latest" >> $GITHUB_ENV
-          else
-            echo "final_tag=${{inputs.tag}}" >> $GITHUB_ENV
-          fi
+     # - name: Set the tag
+        #run: |
+          #if [ -z "${{inputs.tag}}" ]
+         # then
+         #   echo "final_tag=latest" >> $GITHUB_ENV
+        #  else
+       #     echo "final_tag=${{inputs.tag}}" >> $GITHUB_ENV
+      #    fi
       
-      - name: Build and Push the Image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
-          
+     # - name: Build and Push the Image
+        #uses: docker/build-push-action@v2
+        #with:
+       #   context: .
+      #    push: true
+     #     tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
+      
           
   do-something-else:
     runs-on: ubuntu-latest
