--- a/.github/workflows/ReusableWorkflowuser.yaml
+++ b/.github/workflows/ReusableWorkflowuser.yaml
@@ -19,7 +19,10 @@ jobs:
     uses: AshwiniRanganath2020/ReusableWorkflow/.github/workflows/build.yml@main
     with:
       image_name: ashwiniranganath2020/trivyscan
-      tag: ashwiniranganath2020/trivyscan
+      image_tag: latest
+      GHCR_REPO: https://hub.docker.com/
+      docker_file_path: AshwiniRanganath2020/ReusableWorkflow/Dockerfile
+      Packages_lock: AshwiniRanganath2020/ReusableWorkflow/package-lock.json
     secrets:
       registry_username: ${{secrets.DOCKER_HUB_USERNAME}}
       registry_password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
