--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,22 @@ on:
       image_name: 
         required: true
         type: string
-      tag: 
+      # GitHub Repo Name		
+      GHCR_REPO:
+        required: true
+        type: string	
+      # Path to the Dockerfile. (default {context}/Dockerfile)
+      docker_file_path:
+        required: true
         type: string
+      image_tag:
+        required: true
+        type: string
+        default: "0"
+      Packages_lock:
+        type: string
+        required: true
+        description: "location of lock file Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json" 
       
     secrets:
       REGISTRY_USERNAME:
@@ -29,7 +43,7 @@ jobs:
           git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
       - name: copy the docker file to template directory
         run: |
-          cp ${{ inputs.docker_file_path }}./ReusableWorkflow/Dockerfile ./ReusableWorkflow/configs   
+          cp ${{ inputs.docker_file_path }}/Dockerfile ./ReusableWorkflow/configs   
       - name: Install Trivy CLI
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
@@ -90,8 +104,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2
         with:          
-          username: ashwiniranganath2020
-          password: AshwiniRanganath2020 
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} 
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
