--- a/.github/workflows/ReusableWorkflowuser.yaml
+++ b/.github/workflows/ReusableWorkflowuser.yaml
@@ -19,7 +19,7 @@ jobs:
     uses: AshwiniRanganath2020/ReusableWorkflow/.github/workflows/build.yml@main
     with:
       image_name: ashwiniranganath2020/trivyscan
-      image_tag: latest
+     # image_tag: 0
       GHCR_REPO: https://hub.docker.com/
       docker_file_path: ./ReusableWorkflow
       Packages_lock: AshwiniRanganath2020/ReusableWorkflow/package-lock.json
