--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,9 @@ on:
       docker_file_path:
         required: true
         type: string
-      image_tag:
-        required: true
-        type: string
+     # image_tag:
+     #   required: true
+     #   type: string
         #default: "2.0"
       Packages_lock:
         type: string
