--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,8 @@
-name: build
-
+name: docker image build 
 on:
   workflow_call:
     inputs:
-      image_name: 
+      image_name:
         required: true
         type: string
       # GitHub Repo Name		
@@ -14,36 +13,42 @@ on:
       docker_file_path:
         required: true
         type: string
-      tag:
-       required: true
-       type: string
-        #default: "2.0"
+      image_tag:
+        required: true
+        type: string
+        default: "0"
       Packages_lock:
         type: string
         required: true
-        description: "location of lock file Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json" 
-      
-    secrets:
-      REGISTRY_USERNAME:
+        description: "location of lock file Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json"    
+      username:
+        type: string
         required: true
-      REGISTRY_PASSWORD:
-        required: true
-
+        description: "github username"
 jobs:
-  do-it:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: copy template file from  ReusableWorkflow repo
+      - name: Event Info
+        if: github.actor != 'dependabot[bot]' && !(github.event_name == 'push' || github.event_name == 'workflow_dispatch')
         run: |
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
+          echo "::warning  ::Code changes wont be deployed for pull requests."  
+      - name: Clear GitHub Workspace
+        run: rm -fr $GITHUB_WORKSPACE && mkdir $GITHUB_WORKSPACE
+      
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Build docker image from Dockerfile (Optional)
+        run: |
+          docker build -t ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}  ${{ inputs.docker_file_path }}
+      - name: copy template file from  shared-workflows repo
+        run: |
+          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
       - name: copy the docker file to template directory
         run: |
-          cp ${{ inputs.docker_file_path }}/Dockerfile ./ReusableWorkflow/configs   
+          cp ${{ inputs.docker_file_path }}/Dockerfile ./shared-workflows/configs   
       - name: Install Trivy CLI
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
@@ -54,15 +59,15 @@ jobs:
      
       - name: Run Trivy  scan for Docker Image and generate html report
         run: |
-          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
+          /usr/local/bin/trivy image  --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
       
       - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
-          /usr/local/bin/trivy -q fs . --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+          /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
       - name: Run Trivy scan for dockerfile 
         run: |
-          /usr/local/bin/trivy conf --policy ./ReusableWorkflow/policies --format template --template "@./ReusableWorkflow/html.tpl" -o Report3.html  --namespaces user ./ReusableWorkflow/configs
+          /usr/local/bin/trivy conf --policy ./shared-workflows/policies --format template --template "@./shared-workflows/html.tpl" -o Report3.html  --namespaces user ./shared-workflows/configs
         
       - name: Append all reports to Report.html
         run: |
@@ -93,23 +98,21 @@ jobs:
 
       - name: check for Crtical & High vulnerabilities in Docker Image
         run: |
-          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
+          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
      
       - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
-          /usr/local/bin/trivy -q fs . --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore"  ${{ inputs.Packages_lock }}      
+          /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore"  ${{ inputs.Packages_lock }}      
+
       - name: check for Misconfig in Dockerfile (Optional)
         run: |
-          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./ReusableWorkflow/configs
+          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./shared-workflows/policies  --namespaces user ./shared-workflows/configs
       - name: Docker Login
         uses: docker/login-action@v2
-        with:          
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} 
-      - name: Build and push
-        uses: docker/build-push-action@v3
         with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ashwiniranganath2020/trivyscan:1.0
+          registry: ghcr.io
+          username: shyam-ks
+          password: ${{ secrets.GH_TOKEN }}  
+      - name: Push Docker Image to registry
+        run: |
+          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
