--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,54 +1,35 @@
-name: docker image build 
+name: build
+
 on:
   workflow_call:
     inputs:
-      image_name:
+      image_name: 
         required: true
         type: string
-      # GitHub Repo Name		
-      GHCR_REPO:
-        required: true
-        type: string	
-      # Path to the Dockerfile. (default {context}/Dockerfile)
-      docker_file_path:
-        required: true
+      tag: 
         type: string
-      image_tag:
+      
+    secrets:
+      REGISTRY_USERNAME:
         required: true
-        type: string
-        default: "0"
-      Packages_lock:
-        type: string
+      REGISTRY_PASSWORD:
         required: true
-        description: "location of lock file Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json"    
-      username:
-        type: string
-        required: true
-        description: "github username"
+
 jobs:
-  build:
-    name: Build
+  do-it:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Event Info
-        if: github.actor != 'dependabot[bot]' && !(github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+      - uses: actions/checkout@v2
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      - name: copy template file from  ReusableWorkflow repo
         run: |
-          echo "::warning  ::Code changes wont be deployed for pull requests."  
-      - name: Clear GitHub Workspace
-        run: rm -fr $GITHUB_WORKSPACE && mkdir $GITHUB_WORKSPACE
-      
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Build docker image from Dockerfile (Optional)
-        run: |
-          docker build -t ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}  ${{ inputs.docker_file_path }}
-      - name: copy template file from  shared-workflows repo
-        run: |
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
+          git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
       - name: copy the docker file to template directory
         run: |
-          cp ${{ inputs.docker_file_path }}/Dockerfile ./shared-workflows/configs   
+          cp ${{ inputs.docker_file_path }}./ReusableWorkflow/Dockerfile ./ReusableWorkflow/configs   
       - name: Install Trivy CLI
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
@@ -59,15 +40,15 @@ jobs:
      
       - name: Run Trivy  scan for Docker Image and generate html report
         run: |
-          /usr/local/bin/trivy image  --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
       
       - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
-          /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+          /usr/local/bin/trivy -q fs . --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
       - name: Run Trivy scan for dockerfile 
         run: |
-          /usr/local/bin/trivy conf --policy ./shared-workflows/policies --format template --template "@./shared-workflows/html.tpl" -o Report3.html  --namespaces user ./shared-workflows/configs
+          /usr/local/bin/trivy conf --policy ./ReusableWorkflow/policies --format template --template "@./ReusableWorkflow/html.tpl" -o Report3.html  --namespaces user ./ReusableWorkflow/configs
         
       - name: Append all reports to Report.html
         run: |
@@ -98,21 +79,23 @@ jobs:
 
       - name: check for Crtical & High vulnerabilities in Docker Image
         run: |
-          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
      
       - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
-          /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore"  ${{ inputs.Packages_lock }}      
-
+          /usr/local/bin/trivy -q fs . --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore"  ${{ inputs.Packages_lock }}      
       - name: check for Misconfig in Dockerfile (Optional)
         run: |
-          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./shared-workflows/policies  --namespaces user ./shared-workflows/configs
+          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./ReusableWorkflow/configs
       - name: Docker Login
         uses: docker/login-action@v2
+        with:          
+          username: ashwiniranganath2020
+          password: AshwiniRanganath2020 
+      - name: Build and push
+        uses: docker/build-push-action@v3
         with:
-          registry: ghcr.io
-          username: shyam-ks
-          password: ${{ secrets.GH_TOKEN }}  
-      - name: Push Docker Image to registry
-        run: |
-          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ashwiniranganath2020/trivyscan:1.0
