--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,23 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a one-line script
         run: echo Hello, world!
+        
+      - name: Event Info
+        if: github.actor != 'dependabot[bot]' && !(github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+        run: |
+          echo "::warning  ::Code changes wont be deployed for pull requests."  
+      - name: Clear GitHub Workspace
+        run: rm -fr $GITHUB_WORKSPACE && mkdir $GITHUB_WORKSPACE
+      
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Build docker image from Dockerfile (Optional)
+        run: |
+          docker build -t ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}  ${{ inputs.docker_file_path }}
+      - name: copy template file from  shared-workflows repo
+        run: |
+          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
 
       - name: copy template file from  ReusableWorkflow repo
         run: |
