--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,12 @@ jobs:
       - name: Build docker image from Dockerfile (Optional)
         run: |
           docker build -t ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}  ${{ inputs.docker_file_path }}
-      - name: copy template file from  shared-workflows repo
+          
+      - name: copy template file from  AshwiniRanganath2020 
         run: |
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
+          git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/shared-workflows.git
 
-      - name: copy template file from  ReusableWorkflow repo
+      - name: copy template file from  AshwiniRanganath2020 
         run: |
           git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
       - name: copy the docker file to template directory
