--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,39 +51,39 @@ jobs:
          blackduck-api-token: ${{ secrets.BLACKDUCK_TOKEN }}
 
 
-      - name: copy template file from  ReusableWorkflow repo
-        run: |
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
-      - name: copy the docker file to template directory
-        run: |
-          cp ${{ inputs.docker_file_path }}./ReusableWorkflow/Dockerfile ./ReusableWorkflow/configs   
-      - name: Install Trivy CLI
-        run: |
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
+     # - name: copy template file from  ReusableWorkflow repo
+     #   run: |
+      #    git clone https://${{ secrets.GH_TOKEN }}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
+     # - name: copy the docker file to template directory
+      #  run: |
+       #   cp ${{ inputs.docker_file_path }}./ReusableWorkflow/Dockerfile ./ReusableWorkflow/configs   
+      #- name: Install Trivy CLI
+       # run: |
+        #  curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
  
-      - name: downloading  vulnerability  database
-        run: |
-          /usr/local/bin/trivy image --download-db-only  
+      #- name: downloading  vulnerability  database
+       # run: |
+        #  /usr/local/bin/trivy image --download-db-only  
      
-      - name: Run Trivy  scan for Docker Image and generate html report
-        run: |
-          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
+      #- name: Run Trivy  scan for Docker Image and generate html report
+       # run: |
+        #  /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
       
-      - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
-        run: |
-          /usr/local/bin/trivy -q fs . --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+      #- name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
+       # run: |
+        #  /usr/local/bin/trivy -q fs . --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
-      - name: Run Trivy scan for dockerfile 
-        run: |
-          /usr/local/bin/trivy conf --policy ./ReusableWorkflow/policies --format template --template "@./ReusableWorkflow/html.tpl" -o Report3.html  --namespaces user ./ReusableWorkflow/configs
+      #- name: Run Trivy scan for dockerfile 
+       # run: |
+        #  /usr/local/bin/trivy conf --policy ./ReusableWorkflow/policies --format template --template "@./ReusableWorkflow/html.tpl" -o Report3.html  --namespaces user ./ReusableWorkflow/configs
         
-      - name: Append all reports to Report.html
-        run: |
-          cat Report3.html >> Report2.html;cat Report2.html >> Report.html
-      - name: Upload Trivy vulnerabilities Report to artifact
-        uses: actions/upload-artifact@v3
-        with:
-          path: "Report.html"  
+     # - name: Append all reports to Report.html
+      #  run: |
+       #   cat Report3.html >> Report2.html;cat Report2.html >> Report.html
+     # - name: Upload Trivy vulnerabilities Report to artifact
+      #  uses: actions/upload-artifact@v3
+      #  with:
+       #   path: "Report.html"  
 #      #  Send Trivy report from self-hosted runner
 #      - name: Send Report in mail
 #        uses: dawidd6/action-send-mail@v3
@@ -104,25 +104,25 @@ jobs:
 #          in_reply_to: svc-checkmarx@bakerhughes.com
 #          attachments: ./Report.html
 
-      - name: check for Crtical & High vulnerabilities in Docker Image
-        run: |
-          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
+     # - name: check for Crtical & High vulnerabilities in Docker Image
+      #  run: |
+      #    /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
      
-      - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
-        run: |
-          /usr/local/bin/trivy -q fs . --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore"  ${{ inputs.Packages_lock }}      
-      - name: check for Misconfig in Dockerfile (Optional)
-        run: |
-          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./ReusableWorkflow/configs
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:          
-          username: ashwiniranganath2020
-          password: AshwiniRanganath2020 
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ashwiniranganath2020/trivyscan:1.0
+     # - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
+      #  run: |
+       #   /usr/local/bin/trivy -q fs . --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore"  ${{ inputs.Packages_lock }}      
+     # - name: check for Misconfig in Dockerfile (Optional)
+      #  run: |
+      #    /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./ReusableWorkflow/configs
+     # - name: Docker Login
+      #  uses: docker/login-action@v2
+      #  with:          
+       #   username: ashwiniranganath2020
+        #  password: AshwiniRanganath2020 
+     # - name: Build and push
+      #  uses: docker/build-push-action@v3
+      #  with:
+       #   context: .
+       #   file: ./Dockerfile
+       #   push: true
+        #  tags: ashwiniranganath2020/trivyscan:1.0
