--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
           DETECT_DIAGNOSTIC: true
         with:
          scan-mode: INTELLIGENT
-         github-token: ${{ secrets.GH_TOKEN }}
+         github-token: ${{ secrets.GITHUB_TOKEN}}
          detect-version: 8.2.0
          blackduck-url: ${{ secrets.BLACKDUCK_URL }}
          blackduck-api-token: ${{ secrets.BLACKDUCK_TOKEN }}
